--- a/apim-conf/deployment.toml
+++ b/apim-conf/deployment.toml
@@ -244,6 +244,9 @@ sp_name_regex = "^[\\sa-zA-Z0-9._-]*$"
 [database.local]
 url = "jdbc:h2:./repository/database/WSO2CARBON_DB;DB_CLOSE_ON_EXIT=FALSE"
 
+[database_configuration]
+enable_h2_console = "true"
+
 [[event_listener]]
 id = "token_revocation"
 type = "org.wso2.carbon.identity.core.handler.AbstractIdentityHandler"
