--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,14 @@ services:
     ports:
       - "3306:3306"
     environment:
-      MYSQL_ROOT_PASSWORD: 'ueeHWugC!'
+      MYSQL_ROOT_PASSWORD: '***'
       MYSQL_DATABASE: 'WSO2AMI_DB'
       MYSQL_USER: 'wso2'
-      MYSQL_PASSWORD: 'ueeHWugc!'
-      TZ: Europe/Minsk
+      MYSQL_PASSWORD: '***'
+      TZ: */*
     volumes:
       - ./db/scripts:/docker-entrypoint-initdb.d
       - ./db/mysql_idb:/var/lib/mysql
-    command: [--ssl=0]
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-uroot", "-proot"]
       interval: 120s
@@ -34,13 +33,6 @@ services:
   api-manager:
     image: wso2/wso2am
     container_name: wso2_am
-    environment:
-      DB_DRIVER: "com.mysql.jdbc.Driver"
-      DB_TYPE: "mysql"
-      DB_PORT: "3306"
-      DB_URL: "jdbc:mysql://wso2_mysql/WSO2AM_DB"
-      DB_USER: "root"
-      DB_PASSWORD: "ueeHWugC!"
     healthcheck:
       test: ["CMD", "curl", "-k", "-f", "https://localhost:9443/carbon/admin/login.jsp"]
       interval: 120s
